--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Word:
       <input v-model="edit.original">
       <span class="translation">Translation:</span>
-      <input v-model="edit.translation">
+      <input v-model="edit.translation"  v-on:keyup.enter="add">
       <button v-on:click="add" class="fa fa-plus"></button>
       <div class="button-advance" v-on:click="startTest">
         Start Test
@@ -36,7 +36,7 @@
         <div class="progress-bar" :style="{width: test.progress + '%'}"></div>
       </div>
       <span class="question">{{ test.question }}:</span>
-      <input v-model="test.answer">
+      <input v-model="test.answer" v-on:keyup.enter="submitTest">
       <button class="fa fa-arrow-right" v-on:click="submitTest"></button>
     </div>
 
